<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mains"
    tools:context=".NASA">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <ImageView
        android:id="@+id/location"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/Long_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/test_1" />
    <TextView
        android:id="@+id/Lat_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/test_2" />
    <TextView
        android:id="@+id/Date_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/test_3" />

    <ProgressBar
        android:id="@+id/ProgB"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/Lat_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:hint="@string/Str_1" />

        <EditText
            android:id="@+id/Long_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:hint="@string/Str_2" />


    </LinearLayout>
    <EditText
        android:id="@+id/Date_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:hint="@string/Str_4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Enter_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:text="@string/Butt_2" />

        <Button
            android:id="@+id/Save_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Butt_5" />
        <Button
            android:id="@+id/Fav_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Butt_1" />


    </LinearLayout>

</LinearLayout>