<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="369dp"
        app:srcCompat="@drawable/nasa" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:text="@string/profile_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/saveEmail"
        android:layout_width="375dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:text="@string/passwordTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="379dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login2"
        android:layout_width="382dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:text="@string/login_button" />
</LinearLayout>